Changed name on header to aside

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Olivia Isberg</title>
 </head>
 <body>
-    <header class="show-menu">
+    <aside class="show-menu">
         <span id="hidden-menu-icon" class="material-icons">menu</span>
         <ul>
             <div class="github-account">
@@ -23,7 +23,7 @@
                 <li><a href="#">Kontakt</a></li>
             </div>
         </ul>
-    </header>
+    </aside>
     
 </body>
 </html>
