Added transition when menu is shown

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Olivia Isberg</title>
 </head>
 <body>
-    <aside class="show-menu">
+    <aside class="show-menu side-menu">
         <span id="hidden-menu-icon" class="material-icons">menu</span>
         <ul>
             <div class="github-account">
