Added content in header

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <script src="main.js"></script>
     <title>Olivia Isberg</title>
 </head>
 <body>
     <aside class="show-menu side-menu">
-        <span id="hidden-menu-icon" class="material-icons">menu</span>
-        <ul>
-            <div class="github-account">
-                <i id="github" class="fab fa-github"></i>
-                <li><a href="#">Github</a></li>
-            </div>
-            <div class="contact">
-                <span id="email" class="material-icons">email</span>
-                <li><a href="#">Kontakt</a></li>
-            </div>
-        </ul>
+        <div id="menu-items">
+            <i id="hidden-menu-icon" class="fas fa-bars"></i>
+            <ul class="socials">
+                <li><a href="#"><i class="fab fa-github"></i>GitHub</a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
+                <li><a href="#"><i class="fas fa-envelope"></i>Kontakt</a></li>
+            </ul>
+        </div>
     </aside>
+    <header class="headline">
+        <h1>CV</h1>
+        <h3>Olivia Isberg</h3>
+    </header>
     
 </body>
 </html>
