Added picture to cv

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
             </ul>
         </div>
     </aside>
-    <header class="headline">
-        <h1>CV</h1>
-        <h3>Olivia Isberg</h3>
-    </header>
+    <main class="main-content">
+        <header class="headline">
+            <h1>CV</h1>
+            <h3>Olivia Isberg</h3>
+        </header>
+        <div class="image">
+            <img src="Olivia.jpg" width="150vw" height="150vh">
+        </div>
+    </main>
     
 </body>
 </html>
