Added information about myself on frontpage

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <script src="main.js"></script>
-    <title>Olivia Isberg</title>
+    <title>Olivia Isberg | CV</title>
 </head>
 <body>
     <aside class="show-menu side-menu">
         <div id="menu-items">
             <i id="hidden-menu-icon" class="fas fa-bars"></i>
             <ul class="socials">
-                <li><a href="#"><i class="fab fa-github"></i>GitHub</a></li>
+                <li><a href="https://github.com/OliviaIsberg?tab=repositories"><i class="fab fa-github"></i>GitHub</a></li>
                 <li><a href="#"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
                 <li><a href="#"><i class="fas fa-envelope"></i>Kontakt</a></li>
             </ul>
@@ -28,6 +28,34 @@
         <div class="image">
             <img src="Olivia.jpg" width="150vw" height="150vh">
         </div>
+        <article class="descriptive-text">
+            <!-- Information about me -->
+            <h2>Student på medieinstitutet</h2>
+            <p>Hej! Olivia Isberg heter jag och jag läser mitt första år på medieinstitutet med inriktining front end devoloper.</p>
+            <!-- Education -->
+            <h4>Utbildning</h4>
+            <h5>Yrkeshögskola Medieinstitutet</h5>
+            <p>Front end developer | 2021 - 2023</p>
+            <h5>Elof lindälvs gymnasium</h5>
+            <p>Hotell och turism | 2011 - 2014</p>
+            <!-- Work experience -->
+            <h4>Arbetslivserfarenhet</h4>
+            <h5>Ica Sannegården</h5>
+            <p>Driftansvarig | September 2021 - nuvarande</p>
+            <h5>Hemköp Bifrost</h5>
+            <p>Spel och postansvarig | Septemer 2014 - September 2021</p>
+            <h3>Nuvarande utbildning</h3>
+            <h4>Kurser</h4>
+            <p>HTML och CSS | <i class="fas fa-check"></i></p>
+            <p>Ux och usibility | <i class="fas fa-check"></i></p>
+            <p>Javascript grundkurs | vecka 44 - 51 2021 | vecka 2 - 5 2022</p>
+            <p>Javascript fördjupning | vecka 6 - 13 2022</p>
+            <p>Dynamisk Webbutveckling | vecka 14 - 22 2022</p>
+            <p>Grafiska verktyg för gränssnittsanalys | vecka 22, 23 samt vecka 33 2022 </p>
+            <p>Projektarbete med agila metoder | vecka 34 - 36 2022</p>
+            <p>Arbetsmetodik för utvecklare | vecka 47 - 50 2022</p>
+
+        </article>
     </main>
     
 </body>
