--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div id="menu-items">
             <i id="hidden-menu-icon" class="fas fa-bars"></i>
             <ul class="socials">
-                <li><a href="https://github.com/OliviaIsberg?tab=repositories"><i class="fab fa-github"></i>GitHub</a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
-                <li><a href="#"><i class="fas fa-envelope"></i>Kontakt</a></li>
+                <li><a href="https://github.com/OliviaIsberg?tab=repositories"><i class="fab fa-github"></i><span class="label">GitHub</span></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i><span class="label">LinkedIn</span></a></li>
+                <li><a href="#"><i class="fas fa-envelope"></i><span class="label">Kontakt</span></a></li>
             </ul>
         </div>
     </aside>
@@ -36,8 +36,8 @@
 			</p>
 		
 			<!-- Yrkeserfarenhet & Utbildningar -->
-            <h2 class="cv-header">Curriculum Vitae</h2>
 			<section class="cv">
+				<h2 class="cv-header">Curriculum Vitae</h2>
 				<article class="activity">
 					<h3>Medieinstitutet</h3>
 					<p>Utbildning | Front end developer | 2021 - 2023</p>
@@ -59,15 +59,17 @@
 			</section>
 
 			<!-- Utbildning -->
-            <h2>Kurser</h2>
-            <p>HTML och CSS | <i class="fas fa-check"></i></p>
-            <p>Ux och usibility | <i class="fas fa-check"></i></p>
-            <p>Javascript grundkurs | vecka 44 - 51 2021 | vecka 2 - 5 2022</p>
-            <p>Javascript fördjupning | vecka 6 - 13 2022</p>
-            <p>Dynamisk Webbutveckling | vecka 14 - 22 2022</p>
-            <p>Grafiska verktyg för gränssnittsanalys | vecka 22, 23 samt vecka 33 2022 </p>
-            <p>Projektarbete med agila metoder | vecka 34 - 36 2022</p>
-            <p>Arbetsmetodik för utvecklare | vecka 47 - 50 2022</p>
+			<section class="education">
+				<h2>Kurser</h2>
+				<p>HTML och CSS | <i class="fas fa-check"></i></p>
+				<p>Ux och usibility | <i class="fas fa-check"></i></p>
+				<p>Javascript grundkurs | vecka 44 - 51 2021 | vecka 2 - 5 2022</p>
+				<p>Javascript fördjupning | vecka 6 - 13 2022</p>
+				<p>Dynamisk Webbutveckling | vecka 14 - 22 2022</p>
+				<p>Grafiska verktyg för gränssnittsanalys | vecka 22, 23 samt vecka 33 2022 </p>
+				<p>Projektarbete med agila metoder | vecka 34 - 36 2022</p>
+				<p>Arbetsmetodik för utvecklare | vecka 47 - 50 2022</p>
+			</section>
 
         </article>
     </main>
