--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 				<h2>Kurser</h2>
 				<p>HTML och CSS | <i class="fas fa-check"></i></p>
 				<p>Ux och usibility | <i class="fas fa-check"></i></p>
-				<p>Javascript grundkurs | vecka 44 - 51 2021 | vecka 2 - 5 2022</p>
-				<p>Javascript fördjupning | vecka 6 - 13 2022</p>
-				<p>Dynamisk Webbutveckling | vecka 14 - 22 2022</p>
-				<p>Grafiska verktyg för gränssnittsanalys | vecka 22, 23 samt vecka 33 2022 </p>
-				<p>Projektarbete med agila metoder | vecka 34 - 36 2022</p>
-				<p>Arbetsmetodik för utvecklare | vecka 47 - 50 2022</p>
+				<p>Javascript grundkurs | start 1/11 2021</p>
+				<p>Javascript fördjupning | start 7/2 2022</p>
+				<p>Dynamisk Webbutveckling | start 4/4 2022</p>
+				<p>Grafiska verktyg för gränssnittsanalys | start 6/6 2022 </p>
+				<p>Projektarbete med agila metoder | start 22/8 2022</p>
+				<p>Arbetsmetodik för utvecklare | start 21/11 2022</p>
 			</section>
 
         </article>
