Changed styling and added text about me

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" type="text/css">
     <script src="main.js"></script>
+	<script src="lineanim.js"></script>
     <title>Olivia Isberg | CV</title>
 </head>
 <body>
@@ -31,9 +32,14 @@
 				<h1>Olivia Isberg <span class="thin">| <span id="c-locator">C</span>V</span></h1>
 				<p>Front End Developer under utbildning</p>
 			</article>
-			<p>
-				Jag är en 26-årig tjej som just nu studerar till Front End Developer på Medieinstitutet i Göteborg.
-			</p>
+			<section class="about-me">
+				<p>
+					Jag är en 26-årig tjej bosatt i Göteborg som studerar till front-end developer på Medieinstitutet i Göteborg.
+				</p>
+				<p>
+					Mina främsta egenskaper är att jag är driven, målinriktad och snabblärd. När jag brinner för något så ger jag mig inte förrän jag har lyckats. 
+				</p>
+			</section>
 		
 			<!-- Yrkeserfarenhet & Utbildningar -->
 			<section class="cv">
@@ -61,15 +67,78 @@
 			<!-- Utbildning -->
 			<section class="education">
 				<h2>Kurser</h2>
-				<p>HTML och CSS | <i class="fas fa-check"></i></p>
-				<p>Ux och usibility | <i class="fas fa-check"></i></p>
-				<p>Javascript grundkurs | start 1/11 2021</p>
-				<p>Javascript fördjupning | start 7/2 2022</p>
-				<p>Dynamisk Webbutveckling | start 4/4 2022</p>
-				<p>Grafiska verktyg för gränssnittsanalys | start 6/6 2022 </p>
-				<p>Projektarbete med agila metoder | start 22/8 2022</p>
-				<p>Arbetsmetodik för utvecklare | start 21/11 2022</p>
+				<article class="activity">
+					<h4>HTML och CSS<i class="fas fa-check check-icon"></i></h4>
+				</article>
+
+				<article class="activity">
+					<h4>Ux och usibility<i class="fas fa-check check-icon"></i></h4>
+				</article>
+
+				<article class="activity">
+					<h4>Javascript grundkurs</h4>
+					<p>start 1/11 2021</p>
+				</article>
+
+				<article class="activity">
+					<h4>Javascript fördjupning</h4>
+					<p>start 7/2 2022</p>
+				</article>
+
+				<article class="activity">
+					<h4>Dynamisk Webbutveckling</h4>
+					<p>start 4/4 2022</p>
+				</article>
+
+				<article class="activity">
+					<h4>Grafiska verktyg för gränssnittsanalys</h4>
+					<p>start 6/6 2022</p>
+				</article>
+
+				<article class="activity">
+					<h4>Projektarbete med agila metoder</h4>
+					<p>start 22/8 2022</p>
+				</article>
+
+				<article class="activity">
+					<h4>Arbetsmetodik för utvecklare</h4>
+					<p>start 21/11 2022</p>
+				</article>
 			</section>
+			<!-- <table>
+				<tr>
+				  <td>HTML och CSS</i></td>
+				  <td><i class="fas fa-check check-icon"></i></td>
+				</tr>
+				<tr>
+					<td>Ux och usibility</i></td>
+					<td><i class="fas fa-check check-icon"></i></td>
+				  </tr>
+				<tr>
+				  <td>Javascript grundkurs</td>
+				  <td>start 1/11 2021</td>
+				</tr>
+				<tr>
+					<td>Javascript fördjupning</td>
+					<td>start 7/2 2022</td>
+				  </tr>
+				  <tr>
+					<td>Dynamisk Webbutveckling </td>
+					<td>start 4/4 2022</td>
+				  </tr>
+				  <tr>
+					<td>Grafiska verktyg för gränssnittsanalys</td>
+					<td>start 6/6 2022</td>
+				  </tr>
+				  <tr>
+					  <td>Projektarbete med agila metoder</td>
+					  <td>start 22/8 2022</td>
+				  </tr>
+				  <tr>
+					  <td>Arbetsmetodik för utvecklare</td>
+					  <td>start 21/11 2022</td>
+				  </tr>
+			  </table> -->
 
         </article>
     </main>
@@ -86,6 +155,5 @@
 			C 79 223 -96 39 -96 -145
 		" />
 	</svg>
-	<script src="lineanim.js"></script>
 </body>
 </html>
