--- a/index.html
+++ b/index.html
@@ -12,14 +12,36 @@
     <title>Olivia Isberg | CV</title>
 </head>
 <body>
-    <aside class="show-menu side-menu">
-        <div id="menu-items">
-            <i id="hidden-menu-icon" class="fas fa-bars"></i>
-            <ul class="socials">
-                <li><a href="https://github.com/OliviaIsberg?tab=repositories"><i class="fab fa-github"></i><span class="label">GitHub</span></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i><span class="label">LinkedIn</span></a></li>
-                <li><a href="#"><i class="fas fa-envelope"></i><span class="label">Kontakt</span></a></li>
-            </ul>
+    <aside class="side-menu">
+		<a href="#" id="menu-toggle">
+			<div class="menu-toggle-icon">
+				<i class="fas fa-bars"></i>
+			</div>
+		</a>
+        <div id="menu-content">
+			<div class="menu-items">
+				<ul class="socials">
+					<li><a href="https://github.com/OliviaIsberg?tab=repositories"><i class="fab fa-github"></i><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/olivia-isberg-b02ba7226"><i class="fab fa-linkedin"></i><span class="label">LinkedIn</span></a></li>
+					<li><a href="#" id="contact"><i class="fas fa-envelope"></i><span class="label">Kontakt</span></a></li>
+				</ul>
+			</div>
+			<div class="contact-form">
+				<div class="contact-container">
+					<form action="">
+						<label for="name">Namn</label>
+						<input type="text" id="name" name="name">
+
+						<label for="email">Email</label>
+						<input type="email" id="email" name="email">
+
+						<label for="message">Meddelande</label>
+						<textarea name="message" id="message" rows="20"></textarea>
+						
+						<input type="submit" value="Skicka">
+					</form>
+				</div>
+			</div>
         </div>
     </aside>
     <main class="main-content">
