changed height on textarea on small devices

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="mediaqueries.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" type="text/css">
     <script src="main.js"></script>
@@ -94,7 +95,7 @@
 				</article>
 
 				<article class="activity">
-					<h4>Ux och usibility<i class="fas fa-check check-icon"></i></h4>
+					<h4>UX och Usability<i class="fas fa-check check-icon"></i></h4>
 				</article>
 
 				<article class="activity">
@@ -127,40 +128,6 @@
 					<p>start 21/11 2022</p>
 				</article>
 			</section>
-			<!-- <table>
-				<tr>
-				  <td>HTML och CSS</i></td>
-				  <td><i class="fas fa-check check-icon"></i></td>
-				</tr>
-				<tr>
-					<td>Ux och usibility</i></td>
-					<td><i class="fas fa-check check-icon"></i></td>
-				  </tr>
-				<tr>
-				  <td>Javascript grundkurs</td>
-				  <td>start 1/11 2021</td>
-				</tr>
-				<tr>
-					<td>Javascript fördjupning</td>
-					<td>start 7/2 2022</td>
-				  </tr>
-				  <tr>
-					<td>Dynamisk Webbutveckling </td>
-					<td>start 4/4 2022</td>
-				  </tr>
-				  <tr>
-					<td>Grafiska verktyg för gränssnittsanalys</td>
-					<td>start 6/6 2022</td>
-				  </tr>
-				  <tr>
-					  <td>Projektarbete med agila metoder</td>
-					  <td>start 22/8 2022</td>
-				  </tr>
-				  <tr>
-					  <td>Arbetsmetodik för utvecklare</td>
-					  <td>start 21/11 2022</td>
-				  </tr>
-			  </table> -->
 
         </article>
     </main>
