added comments in html and css files

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <title>Olivia Isberg | CV</title>
 </head>
 <body>
+	<!-- hamburger icon -->
     <aside class="side-menu">
 		<a href="#" id="menu-toggle">
 			<div class="menu-toggle-icon">
 				<i class="fas fa-bars"></i>
 			</div>
 		</a>
+		<!-- links to my github, linkedin and contact form -->
         <div id="menu-content">
 			<div class="menu-items">
 				<ul class="socials">
@@ -27,6 +29,7 @@
 					<li><a href="#" id="contact"><i class="fas fa-envelope"></i><span class="label">Kontakt</span></a></li>
 				</ul>
 			</div>
+			<!-- form for contacting me -->
 			<div class="contact-form">
 				<div class="contact-container">
 					<form action="">
@@ -64,7 +67,7 @@
 				</p>
 			</section>
 		
-			<!-- Yrkeserfarenhet & Utbildningar -->
+			<!-- education and work experience -->
 			<section class="cv">
 				<h2 class="cv-header">Curriculum Vitae</h2>
 				<article class="activity">
@@ -87,7 +90,7 @@
 				</article>
 			</section>
 
-			<!-- Utbildning -->
+			<!-- courses that i will finish in school -->
 			<section class="education">
 				<h2>Kurser</h2>
 				<article class="activity">
@@ -131,6 +134,7 @@
 
         </article>
     </main>
+	<!-- svg element containing path element for line effect on load -->
     <svg class="lineanim">
 		<path id="path" d="
 			M 2016 921 
