added formspree action in contact form

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<!-- form for contacting me -->
 			<div class="contact-form">
 				<div class="contact-container">
-					<form action="">
+					<form action="https://formspree.io/f/mnqwaynk" method="POST">
 						<label for="name">Namn</label>
 						<input type="text" id="name" name="name">
 
