Implemented work arounds for Safari iOS bugs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     </aside>
     <main class="main-content">
 		<article class="photo">
-			<img src="Olivia.jpg" id="photo" width="151" height="151">
+			<div class="photo-wrapper">
+				<img src="Olivia.jpg" id="photo" width="151" height="151">
+			</div>
 		</article>
         <article class="descriptive-text">
 			<!-- Information about me -->
