Minor changes in text under courses

--- a/index.html
+++ b/index.html
@@ -104,33 +104,33 @@
 				</article>
 
 				<article class="activity">
-					<h4>Javascript grundkurs</h4>
-					<p>start 1/11 2021</p>
+					<h4>JavaScript grundkurs</h4>
+					<p>start 1/11, 2021</p>
 				</article>
 
 				<article class="activity">
-					<h4>Javascript fördjupning</h4>
-					<p>start 7/2 2022</p>
+					<h4>JavaScript fördjupning</h4>
+					<p>start 7/2, 2022</p>
 				</article>
 
 				<article class="activity">
-					<h4>Dynamisk Webbutveckling</h4>
-					<p>start 4/4 2022</p>
+					<h4>Dynamisk webbutveckling</h4>
+					<p>start 4/4, 2022</p>
 				</article>
 
 				<article class="activity">
 					<h4>Grafiska verktyg för gränssnittsanalys</h4>
-					<p>start 6/6 2022</p>
+					<p>start 6/6, 2022</p>
 				</article>
 
 				<article class="activity">
 					<h4>Projektarbete med agila metoder</h4>
-					<p>start 22/8 2022</p>
+					<p>start 22/8, 2022</p>
 				</article>
 
 				<article class="activity">
 					<h4>Arbetsmetodik för utvecklare</h4>
-					<p>start 21/11 2022</p>
+					<p>start 21/11, 2022</p>
 				</article>
 			</section>
 
