--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 ><span class="label">Kontakt</span></a
               >
             </li>
+            <li>
+              <a href="portfolio.html"
+                ><i class="fa fa-user"></i><span>Portfolio</span></a
+              >
+            </li>
           </ul>
         </div>
         <!-- form for contacting me -->
