--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="portfolio.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link
       rel="stylesheet"
@@ -14,6 +15,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
       type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
     />
     <script src="main.js"></script>
     <script src="lineanim.js"></script>
@@ -75,5 +80,9 @@
         </div>
       </div>
     </aside>
+    <div class="background-headline-container">
+      <h2 class="portfolio-headline">Portfolio</h2>
+    </div>
+    <div class=""></div>
   </body>
 </html>
