--- a/index.html
+++ b/index.html
@@ -32,27 +32,22 @@
         <div class="menu-items">
           <ul class="socials">
             <li>
-              <a href="https://github.com/OliviaIsberg?tab=repositories"
-                ><i class="fab fa-github"></i
-                ><span class="label">GitHub</span></a
-              >
+              <a href="https://github.com/OliviaIsberg?tab=repositories">
+                <i class="fab fa-github"></i>
+                <span class="label">GitHub</span>
+              </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/olivia-isberg-b02ba7226"
-                ><i class="fab fa-linkedin"></i
-                ><span class="label">LinkedIn</span></a
-              >
+              <a href="https://www.linkedin.com/in/olivia-isberg-b02ba7226">
+                <i class="fab fa-linkedin"></i>
+                <span class="label">LinkedIn</span>
+              </a>
             </li>
             <li>
-              <a href="#" id="contact"
-                ><i class="fas fa-envelope"></i
-                ><span class="label">Kontakt</span></a
-              >
-            </li>
-            <li>
-              <a href="portfolio.html"
-                ><i class="fa fa-user"></i><span>Portfolio</span></a
-              >
+              <a href="#" id="contact">
+                <i class="fas fa-envelope"></i>
+                <span class="label">Kontakt</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -125,7 +120,7 @@
           </article>
         </section>
 
-        <!-- courses that i will finish in school -->
+        <!-- my courses -->
         <h2>Kurser</h2>
         <section class="education">
           <article class="activity">
@@ -138,12 +133,11 @@
 
           <article class="activity">
             <h4>JavaScript grundkurs<i class="fas fa-check check-icon"></i></h4>
-            <p>start 1/11, 2021</p>
           </article>
 
           <article class="activity">
             <h4>JavaScript fördjupning</h4>
-            <p>start 7/2, 2022</p>
+            <p>start 7/2, 2022 - pågår</p>
           </article>
 
           <article class="activity">
@@ -170,20 +164,7 @@
     </main>
     <!-- svg element containing path element for line effect on load -->
     <svg class="lineanim">
-      <path
-        id="path"
-        d="
-			M 2016 921 
-			C 1728 921 1632 736 1536 562 
-			C 1440 388 1344 195 902 195 
-			A 1 1 0 0 1 902 35 
-			A 1 1 0 0 1 902 195 
-			C 664 195 295 312 182 199 
-			A 80 80 0 0 1 239 63 
-			A 80 80 0 0 1 239 223 
-			C 79 223 -96 39 -96 -145
-		"
-      />
+      <path id="path" />
     </svg>
   </body>
 </html>
