Added check icon for javascrirpt fördjupnig

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </article>
         <section class="about-me">
           <p>
-            Jag är en 26-årig tjej bosatt i Göteborg som studerar till front-end
-            developer på Medieinstitutet i Göteborg.
+            Jag är en 26-årig tjej bosatt i Göteborg som studerar till Front End
+            Developer på Medieinstitutet i Göteborg.
           </p>
           <p>
             Mina främsta egenskaper är att jag är driven, målinriktad och
@@ -102,7 +102,7 @@
         <section class="cv">
           <article class="activity">
             <h3>Medieinstitutet</h3>
-            <p>Utbildning | Front end developer | 2021 - 2023</p>
+            <p>Utbildning | Front End Developer | 2021 - 2023</p>
           </article>
 
           <article class="activity">
@@ -111,12 +111,14 @@
           </article>
           <article class="activity">
             <h3>Hemköp Bifrost</h3>
-            <p>Jobb | Spel och postansvarig | Septemer 2014 - September 2021</p>
+            <p>
+              Jobb | Spel och postansvarig | September 2014 - September 2021
+            </p>
           </article>
 
           <article class="activity">
             <h3>Elof Lindälvs gymnasium</h3>
-            <p>Utbildning |Hotell och turism | 2011 - 2014</p>
+            <p>Utbildning | Hotell och turism | 2011 - 2014</p>
           </article>
         </section>
 
@@ -136,13 +138,14 @@
           </article>
 
           <article class="activity">
-            <h4>JavaScript fördjupning</h4>
-            <p>start 7/2, 2022 - pågår</p>
+            <h4>
+              JavaScript fördjupning<i class="fas fa-check check-icon"></i>
+            </h4>
           </article>
 
           <article class="activity">
             <h4>Dynamisk webbutveckling</h4>
-            <p>start 4/4, 2022</p>
+            <p>start 4/4, 2022 - pågår</p>
           </article>
 
           <article class="activity">
