add skills and add stylig

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </article>
         <section class="about-me">
           <p>
-            Jag är en 26-årig tjej bosatt i Göteborg som studerar till Front End
+            Jag är en 27-årig tjej bosatt i Göteborg som studerar till Front End
             Developer på Medieinstitutet i Göteborg.
           </p>
           <p>
@@ -95,11 +95,55 @@
             snabblärd. När jag brinner för något så ger jag mig inte förrän jag
             har lyckats.
           </p>
+          <p>
+            Jag har mycket erfarenhet inom techstacken TypeScript, Next.js,
+            React & Sanity.io.
+          </p>
+        </section>
+
+        <h2 class="skills-header">Skills</h2>
+        <section class="skills">
+          <span>TypeScript</span>
+          <span>JavaScript</span>
+          <span>Node.js</span>
+          <span>npm</span>
+          <span>Next.js</span>
+          <span>Express.js</span>
+          <span>Socket.io</span>
+          <span>React</span>
+          <span>React Native</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Tailwind CSS</span>
+          <span>SASS</span>
+          <span>Sanity.io</span>
+          <span>MongoDB</span>
+          <span>Firebase Database</span>
+          <span>GROQ</span>
+          <span>GraphQL</span>
+          <span>SQL</span>
+          <span>OAuth2</span>
+          <span>tRPC</span>
+          <span>Github Projects</span>
+          <span>JIRA</span>
+          <span>p5.js</span>
         </section>
 
         <!-- education and work experience -->
         <h2 class="cv-header">Curriculum Vitae</h2>
         <section class="cv">
+          <article class="activity">
+            <h3>Kruso Digital AB</h3>
+            <p>Praktik | Front End Developer | Januari 2023 - Maj 2023</p>
+          </article>
+
+          <article class="activity">
+            <h3>Kruso Digital AB</h3>
+            <p>
+              Praktik | Front End Developer | September 2022 - November 2022
+            </p>
+          </article>
+
           <article class="activity">
             <h3>Medieinstitutet</h3>
             <p>Utbildning | Front End Developer | 2021 - 2023</p>
@@ -126,15 +170,46 @@
         <h2>Kurser</h2>
         <section class="education">
           <article class="activity">
-            <h4>HTML och CSS<i class="fas fa-check check-icon"></i></h4>
+            <h4>LIA 2</h4>
+            <p>start 29/1, 2023 - pågår</p>
           </article>
 
           <article class="activity">
-            <h4>UX och Usability<i class="fas fa-check check-icon"></i></h4>
+            <h4>Examensarbete<i class="fas fa-check check-icon"></i></h4>
           </article>
 
           <article class="activity">
-            <h4>JavaScript grundkurs<i class="fas fa-check check-icon"></i></h4>
+            <h4>
+              Arbetsmetodik för utvecklare<i
+                class="fas fa-check check-icon"
+              ></i>
+            </h4>
+          </article>
+
+          <article class="activity">
+            <h4>LIA 1<i class="fas fa-check check-icon"></i></h4>
+          </article>
+
+          <article class="activity">
+            <h4>
+              Projektarbete med agila metoder<i
+                class="fas fa-check check-icon"
+              ></i>
+            </h4>
+          </article>
+
+          <article class="activity">
+            <h4>
+              Grafiska verktyg för gränssnittsanalys<i
+                class="fas fa-check check-icon"
+              ></i>
+            </h4>
+          </article>
+
+          <article class="activity">
+            <h4>
+              Dynamisk webbutveckling<i class="fas fa-check check-icon"></i>
+            </h4>
           </article>
 
           <article class="activity">
@@ -144,23 +219,15 @@
           </article>
 
           <article class="activity">
-            <h4>Dynamisk webbutveckling</h4>
-            <p>start 4/4, 2022 - pågår</p>
+            <h4>JavaScript grundkurs<i class="fas fa-check check-icon"></i></h4>
           </article>
 
           <article class="activity">
-            <h4>Grafiska verktyg för gränssnittsanalys</h4>
-            <p>start 6/6, 2022</p>
+            <h4>UX och Usability<i class="fas fa-check check-icon"></i></h4>
           </article>
 
           <article class="activity">
-            <h4>Projektarbete med agila metoder</h4>
-            <p>start 22/8, 2022</p>
-          </article>
-
-          <article class="activity">
-            <h4>Arbetsmetodik för utvecklare</h4>
-            <p>start 21/11, 2022</p>
+            <h4>HTML och CSS<i class="fas fa-check check-icon"></i></h4>
           </article>
         </section>
       </article>
