--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <!-- form for contacting me -->
         <div class="contact-form">
           <div class="contact-container">
+            <p>Kontaktuppgifter</p>
+            <p>0708469486</p>
+            <p>oliviaisberg@gmail.com</p>
+            <p>Det går även bra att fylla i formuläret nedan</p>
             <form action="https://formspree.io/f/mnqwaynk" method="POST">
               <label for="name">Namn</label>
               <input type="text" id="name" name="name" />
