--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             Olivia Isberg
             <span class="thin">| <span id="c-locator">C</span>V</span>
           </h1>
-          <p>Front End Developer under utbildning</p>
+          <p>Front End Developer</p>
         </article>
         <section class="about-me">
           <p>
