--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
         <h2>Kurser</h2>
         <section class="education">
           <article class="activity">
-            <h4>LIA 2</h4>
-            <p>start 29/1, 2023 - pågår</p>
+            <h4>LIA 2 <i class="fas fa-check check-icon"></i></h4>
           </article>
 
           <article class="activity">
